--- a/app/index.html
+++ b/app/index.html
@@ -420,7 +420,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#" class="btn btn-review">Написать отзыв</a>
+                        <a href="reviews.html" class="btn btn-review">Написать отзыв</a>
                     </div>
                 </div>
             </div>
