--- a/app/index.html
+++ b/app/index.html
@@ -526,7 +526,7 @@
     </div>
 
     <!-- Записаться на приём -->
-    <form id="sign-up" class="modal">
+    <form id="sign-up-1" class="modal">
         <div class="modal__title">Записаться на приём</div>
         <input type="text" class="modal__input" name="name" placeholder="Ваше имя*" value=""  required />
         <input type="email" class="modal__input" name="email" placeholder="Ваша почта*" value="" required />
