--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,7 @@
                                             <div class="sub-title">Современная техника</div>
                                             <div class="title">Безопасность клиента <br /> наш девиз</div>
                                             <div class="sign-up__row">
-                                                <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
+                                                <button data-fancybox="dialog" data-src="#sign-up-1" class="btn">Записаться</button>
                                                 <a href="#" class="btn btn-outline">Работы</a>
                                             </div>
                                         </div>
