--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,7 @@
                                             <div class="sub-title">Современная техника</div>
                                             <div class="title">Безопасность клиента <br /> наш девиз</div>
                                             <div class="sign-up__row">
-                                                <button data-fancybox="dialog" data-src="#sign-up-1" class="btn">Записаться</button>
+                                                <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
                                                 <a href="#" class="btn btn-outline">Работы</a>
                                             </div>
                                         </div>
@@ -526,7 +526,7 @@
     </div>
 
     <!-- Записаться на приём -->
-    <form id="sign-up-1" class="modal">
+    <form id="sign-up" class="modal">
         <div class="modal__title">Записаться на приём</div>
         <input type="text" class="modal__input" name="name" placeholder="Ваше имя*" value=""  required />
         <input type="email" class="modal__input" name="email" placeholder="Ваша почта*" value="" required />
